<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingTop="5dp">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="0dp" android:layout_weight="1" android:id="@+id/loginLabel" android:text="@string/loginLabelText" android:layout_gravity="center" android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="0dp" android:layout_weight="1" android:id="@+id/loginField">
            <requestFocus></requestFocus>
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/carLabel" android:text="@string/carLabelText" android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/carField"></EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/passwordLabel" android:text="@string/passwordLabelText" android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_height="wrap_content" android:inputType="textPassword" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/passwordField"></EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/close"
            android:text="@string/exitButonText"
            android:textSize="20sp" 
             >
</Button>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/checkmark"
            android:text="@string/loginButtonText"
            android:textSize="20sp" >
</Button>
    </TableRow>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/loginMessageText" android:text="@string/loginMessageTextLabel"></TextView>
    
</TableLayout>
